mockup login, register, forgot-password, introduction pages

--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,9 @@
     <title></title>
 
     <link rel="stylesheet" href="lib/font-awesome-4.2.0/css/font-awesome.min.css"/>
-    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     
-    <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
