organize scss files

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/directives/directives.js"></script>
     <script src="js/controllers/Main.js"></script>
     <script src="js/controllers/controllers.js"></script>
+    <script src="js/controllers/Categories.js"></script>
   </head>
 
   <body ng-app="myApp">
