change cards behavior, add capture screens

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <script src="lib/jquery.exif.js"></script>
     <script src="lib/jquery.canvasResize.js"></script>
     <script src="lib/collide/collide.js"></script>
-    <script src="lib/ionic.tdcards_modified.js"></script>
+    <script src="lib/ionic-contrib-tinder-cards/ionic.tdcards.js"></script>
     
     <!-- your app's js -->
     <script src="js/app-init.js"></script>
@@ -32,11 +32,14 @@
     <script src="js/router.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/filters.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/services/services.js"></script>
+    <script src="js/services/capture_modal.js"></script>
     <script src="js/directives/directives.js"></script>
     <script src="js/controllers/Main.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/Categories.js"></script>
+    <script src="js/controllers/CaptureModal.js"></script>
+    <script src="js/controllers/UploadCategories.js"></script>
     <script src="js/controllers/Cards.js"></script>
   </head>
 
