full picture screen

--- a/www/index.html
+++ b/www/index.html
@@ -34,13 +34,16 @@
     <script src="js/filters.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/services/capture_modal.js"></script>
+    <script src="js/services/full_picture_modal.js"></script>
     <script src="js/directives/directives.js"></script>
     <script src="js/controllers/Main.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/Categories.js"></script>
     <script src="js/controllers/CaptureModal.js"></script>
+    <script src="js/controllers/FullPictureModal.js"></script>
     <script src="js/controllers/UploadCategories.js"></script>
     <script src="js/controllers/Cards.js"></script>
+    <script src="js/controllers/Profile.js"></script>
   </head>
 
   <body ng-app="myApp">
