--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/controllers/Main.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/Categories.js"></script>
+    <script src="js/controllers/MyResults.js"></script>
     <script src="js/controllers/CaptureModal.js"></script>
     <script src="js/controllers/FullPictureModal.js"></script>
     <script src="js/controllers/UploadCategories.js"></script>
