winners, settings pages

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/controllers/UploadCategories.js"></script>
     <script src="js/controllers/Cards.js"></script>
     <script src="js/controllers/Profile.js"></script>
+    <script src="js/controllers/Winners.js"></script>
   </head>
 
   <body ng-app="myApp">
