change profile page

--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
     <script src="js/controllers/Cards.js"></script>
     <script src="js/controllers/Profile.js"></script>
     <script src="js/controllers/Winners.js"></script>
+    <script src="js/controllers/ChangeProfile.js"></script>
   </head>
 
   <body ng-app="myApp">
